2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use `shared' space for rcsdiff `diffvstr' construction.

	* rcsdiff.c: #include "b-divvy.h".
	(main): Use `shared' space for `diffvstr' construction.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use `single' space for log message handling.

	* rcslex.c (savestring): Don't write to `target';
	use `single' space instead.
	* rcsgen.c (cleanlogmsg): Take first arg as `const'.
	(scandeltatext): Update calls to `savestring', `cleanlogmsg'.
	* rcs.c (scanlogtext): Likewise.
	* rcssyn.c (Commleader): Delete now-unused `struct buf'.
	(getadmin): Update calls to `savestring'.
	* rlog.c (readdeltalog): Likewise.
	* base.h (cleanlogmsg, savestring): Update func decls.
	(manifestation): Delete now-unused member `log'.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use `pointer_array' more.

	* rcsutil.c (getRCSINIT): Use `pointer_array'.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use spaces for `co -j' parsing.

	* co.c: #include "b-divvy.h".
	(joinlength): Delete var.
	(link, jstuff): New structs.
	(jstuff): New static `struct jstuff'.
	(jpush): New func.
	(addjoin): Use `jpush'.
	(preparejoin): Likewise.  Rework `joinlist' init.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use `shared' space for `merge' arg normalization.

	* merger.c: #include "b-divvy.h".
	(normalize_arg): Rewrite.
	(merge): Update call to `normalize_arg'; don't `tfree'.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use `single' space for file(pair)-related allocation.

	* base.h (fremember): Delete func decl.
	(ftalloc): Update.
	(ftnalloc): Delete macro.
	(ffree1): Delete func decl.
	(free_NEXT_str): New func decl.
	* rcsdiff.c (main): Use `ftestalloc'.
	* rcslex.c: #include "b-divvy.h".
	(getkeyopt): Use `free_NEXT_str'.
	(getphrases): Likewise.  Also, use `intern0'.
	* rcssyn.c: Use `free_NEXT_str'.
	* rcsutil.c (alloclist): Delete struct.
	(alloced): Delete pointer to `struct alloclist'.