@@ -959,9 +959,7 @@ void *ftestalloc (size_t);
 void *testalloc (size_t);
 void *testrealloc (void *, size_t);
 #define ftalloc(T)  ((T*) ftestalloc (sizeof (T)))
-#define talloc(T)  tnalloc (T, 1)
-
-#define tnalloc(T,n)  ((T*) testalloc (sizeof (T) * (n)))
+#define talloc(T)  ((T*) testalloc (sizeof (T)))
 #define trealloc(T,p,n)  ((T*) testrealloc ((void *)(p), sizeof (T) * (n)))
 #define tfree(p)  free ((void *)(p))
 
