@@ -1,5 +1,15 @@
 2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int C] Get rid of `tnalloc'.
+
+	* rcsedit.c (insertline): Use `testalloc' directly.
+	* rcsfnms.c (bufalloc): Likewise.
+	* rcslex.c (fd2_RILE): Likewise.
+	* base.h (talloc): Likewise.
+	(tnalloc): Delete macro.
+
+2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[int] Use `shared' space for rcsdiff `diffvstr' construction.
 
 	* rcsdiff.c: #include "b-divvy.h".
